# SchwingerModel

./: .gitignore  CMakeLists.txt  README.md  main.cpp  multi_td.txt  single_td.txt
configs/: default.config.h
data_analysis/: plot.py
src/: imports.hpp
src/classes/: fermion.class.hpp  field.class.hpp  force.class.hpp  gauge.class.hpp  hopping.class.hpp  lattice.class.hpp  momentum.class.hpp
src/configs/: integrator.config.h  lattice.config.h  mc.config.h  misc.config.h  observables.config.h  physics.config.h
src/structs/: gauge.struct.hpp  spinor.struct.hpp
src/utils/: hpc.utils.hpp  log.utils.hpp  random.utils.hpp
v1/: README.md  util.ipynb
v1/devel/check/: Makefile  check1.c  infile
v1/include/: dirac.h  geometry.h  lattice.h  linalg.h  measurements.h  random.h  schwinger.h  update.h
v1/main/: Makefile  cg.d  dirac.d  fermion.d  gauge.d  gauss_rand.d  hmc.d  hopping.d  infile_qed  infile_readme  infile_ym  linalg.d  measurements.d  output.cnfg  ranlxd.d  schwinger  schwinger.c  schwinger.d
v1/modules/dirac/: dirac.c
v1/modules/geometry/: hopping.c
v1/modules/linalg/: cg.c  linalg.c
v1/modules/random/: gauss_rand.c  ranlxd.c
v1/modules/update/: fermion.c  gauge.c  hmc.c  measurements.c
v1/results/: test.ipynb
v1/results/data_analysis/: pcac_mass.py  pion_mass.py  plot.py  plot_corr.py
v1/results/report/: summary.tex
v1/studies/: HVP.py  all_continuum.py  all_tune.py  continuum_limit.py  measure_hvp.py  pcac_mass.py  pion_mass.py  plot.py  plot_corr.py  pseudoscalar_free.py  summary.md  tune_pcac_plot.py  update.py  vector_free.py  vector_test.py
v1/studies/T10_L20_A/k0.2600_b3.125/: infile_qed
v1/tests/: perturbative.ipynb
v2/: CMakeLists.txt  README.md  main.cpp
v2/src/: imports.hpp
v2/src/classes/: fermion.class.hpp  field.class.hpp  force.class.hpp  gauge.class.hpp  hopping.class.hpp  momentum.class.hpp
v2/src/configs/: integrator.config.h  lattice.config.h  log.config.h  mc.config.h  misc.config.h  physics.config.h
v2/src/structs/: spinor.struct.hpp
v2/src/utils/: hpc.utils.hpp  log.utils.hpp  random.utils.hpp  scripts.utils.hpp
v2/tests/: unit_test.cpp
(+243 files in other folders)
